<resources>
    <string name="app_name">My Movie</string>
    <string name="overview_sample">Predominantly set during World War II, Steve Rogers is a sickly man from Brooklyn who\'s transformed into super-soldier Captain America to aid in the war effort. Rogers must stop the Red Skull – Adolf Hitler\'s ruthless head of weaponry, and the leader of an organization that intends to use a mysterious device of untold powers for world domination.</string>
    <string name="title_sample">Captain America: The First Avenger</string>
    <string name="hint_edt_cari_movie">find a movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings_language">Setting Language</string>
    <string name="search_titile_tab">Result Search</string>
    <string name="upcoming_title_tab">Upcoming</string>
    <string name="nowplaying_title_tab">Now Playing</string>
    <string name="favorite_title_tab">Favorites</string>
    <string name="genres_detail">Genres</string>
    <string name="release_detail">Release</string>
    <string name="release_date_sample">2002-05-01</string>
    <string name="appwidget_text">My Favorite Movie</string>
    <string name="key_lang_setting">key_lang</string>
    <string name="summary_language_setting">Choose you language</string>
    <string name="key_today_reminder">key_today_reminder</string>
    <string name="key_release_reminder">key_release_reminder</string>
    <string name="release_today_msg">New release movie now</string>
    <string name="action_settings">Settings</string>
</resources>
